[gd_scene load_steps=2 format=3 uid="uid://btxilb7hhaeh0"]

[ext_resource type="Script" uid="uid://dhs2rie8200k1" path="res://hud.gd" id="1_37p78"]

[node name="hud" type="CanvasLayer"]
offset = Vector2(1200, 0)
transform = Transform2D(1, 0, 0, 1, 1200, 0)
script = ExtResource("1_37p78")

[node name="hitpoints_label" type="Label" parent="."]
offset_left = -24.0
offset_top = 760.0
offset_right = 312.0
offset_bottom = 840.0
theme_override_font_sizes/font_size = 50
text = "Point de vie :"

[node name="explore" type="Button" parent="."]
offset_left = -24.0
offset_top = 240.0
offset_right = 513.0
offset_bottom = 366.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
theme_override_font_sizes/font_size = 80
text = "Explore"
clip_text = true

[node name="attack" type="Button" parent="."]
offset_left = -24.0
offset_top = 400.0
offset_right = 513.0
offset_bottom = 526.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
theme_override_font_sizes/font_size = 80
text = "Attack"
clip_text = true

[node name="hitpoints_value" type="Label" parent="."]
offset_left = 304.0
offset_top = 760.0
offset_right = 344.0
offset_bottom = 829.0
theme_override_font_sizes/font_size = 50

[connection signal="pressed" from="explore" to="." method="_on_button_pressed"]
[connection signal="pressed" from="attack" to="." method="_on_attack_pressed"]
